--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@unhead/vue": "^1.11.7",
     "bulma": "^1.0.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
